--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,13 +10,25 @@
     <header>
         <nav>
             <ul class="navBar">
-                <li> <a href="../index.html">Inicio</a> </li>
-                <li> <a href="./aretes.html">Aretes</a> </li>
-                <li> <a href="./collares.html">Collares</a> </li>
-                <li> <a href="./testimonios.html">Testimonios</a> </li>
-                <li> <a href="./procesos.html">Nuestros procesos</a> </li>
-                <li> <a href="./presentacion.html">¿Quienes somos?</a> </li>
-                <li> <a href="#">Contactanos</a> </li>
+                <div>
+                    <!--<li> <a href=""><img src="./assets/img/Hamburguesa.png" alt="MenuHamburguesa"></a></li>-->
+                    <li><p>Colección</p></li>
+                    <li> <a href="../pages/testimonios.html">Testimonios</a> </li>
+                <li> <a href="../pages/procesos.html">Proceso creativo</a> </li>
+                </div>
+
+                <div class="logo">
+                <li> <a href="../index.html"><img src="../assets/img/Logo.png" alt="Logo"></a></li>
+                </div>
+
+                <!-- <li> <a href="./pages/aretes.html">Aretes</a> </li>
+                     <li> <a href="./pages/collares.html">Collares</a> </li> -->
+
+                <div>
+                    <li> <a href="../pages/presentacion.html">¿Quiénes somos?</a> </li>
+                    <li> <a href="#">Contáctanos</a> </li>
+                    <li> <a href=""><img src="../assets/img/Cesta.png" alt="CarritoDeCompras"></a></li>
+                </div>
             </ul>
         </nav>
     </header>
