--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <title>Borbolet</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -15,18 +16,25 @@
             <ul class="navBar">
 
                 <div>
-                    <!--<li> <a href=""><img src="./assets/img/Hamburguesa.png" alt="MenuHamburguesa"></a></li>-->
-                    <li class="coleccion"><p>Colección</p></li>
-                    <li class="testimonios"> <a href="./pages/testimonios.html">Testimonios</a> </li>
-                    <li class="procesos"> <a href="./pages/procesos.html">Proceso creativo</a> </li>
+                    <div class="dropdown">
+                        <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-list"></i>
+                            <a href="#"> Colección </a>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                          <li><img src="../assets/img/Aretes.png" alt="Logo de unos aretes"><a href="./pages/aretes.html">Aretes</a></li>
+                          <li><img src="../assets/img/collar-svgrepo-com 1.png" alt="Logo de un collar"><a href="./collares.html">Collares</a></li>
+                        </ul>
+                      </div>
+                    <li class="testimonios"> <a href="./testimonios.html">Testimonios</a> </li>
+                    <li class="procesos"> <a href="./procesos.html">Proceso creativo</a> </li>
                 </div>
 
                 <div class="logo">
                 <li> <a href="#"><img src="./assets/img/Logo.png" alt="Logo"></a></li>
                 </div>
 
-                <!-- <li> <a href="./pages/aretes.html">Aretes</a> </li>
-                     <li> <a href="./pages/collares.html">Collares</a> </li> -->
+                <!--<li> <a href="./pages/collares.html">Collares</a> </li> -->
 
                 <div>
                     <li class="presentacion"> <a href="./pages/presentacion.html">¿Quiénes somos?</a> </li>
@@ -92,7 +100,7 @@
                 </article>
             </div>
             <div class="contenedorbtn">
-                <button class="btnVerMas btn1">Ver más</button>
+                <button class="btnVerMas btn1" >Ver más</button>
                 <button class="btnMovilVerMas btnMovil1">Aretes con mostacilla</button>
             </div>
             
@@ -193,6 +201,6 @@
 
     <footer>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
