--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                           <li><img src="./assets/img/Aretes.png" alt="Logo de unos aretes"><a href="./pages/aretes.html">Aretes</a></li>
-                          <li><img src="./assets/img/collar-svgrepo-com 1.png" alt="Logo de un collar"><a href="./collares.html">Collares</a></li>
+                          <li><img src="./assets/img/collar-svgrepo-com 1.png" alt="Logo de un collar"><a href="./pages/collares.html">Collares</a></li>
                         </ul>
                       </div>
                     <li class="testimonios"> <a href="./pages/testimonios.html">Testimonios</a> </li>
