--- a/pages/aretes.html
+++ b/pages/aretes.html
@@ -40,9 +40,9 @@
         </nav>
     </header>
     <main class="earrings-main">
-        <section class="main-section">
-            <section class="title-section">
-                <h1>Aretes</h1>
+        <section class="sectionColeccion">
+            <section class="tituloAretes">
+                <h2>Aretes</h2>
             </section>
             <section class="filters-section">
                 <p>Filtrar:</p>
@@ -60,9 +60,8 @@
                         Material
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><button class="dropdown-item" type="button">Oro</button></li>
-                        <li><button class="dropdown-item" type="button">Plata</button></li>
-                        <li><button class="dropdown-item" type="button">Acero</button></li>
+                        <li><button class="dropdown-item" type="button">Mostacilla</button></li>
+                        <li><button class="dropdown-item" type="button">Miyuki</button></li>
                     </ul>
                 </div>
             </section>
