--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav>
             <ul class="navBar">
 
-                <div>
+                <div class="divNav">
                     <div class="dropdown">
                         <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <a href="#"> Colección </a>
@@ -199,6 +199,55 @@
                 <button class="btnMovilVerMas btnMovil3">Collares</button>
             </div>
             
+         </section>
+
+         <section class="sectionFotografia">
+            <p class="tituloFotografia">Diseños que te elevan</p>
+            <div class="fotografias">
+                <img src="./assets/img/Fotografia1.png" class="fotografia" alt="Imagen aretes puestos">
+                <img src="./assets/img/Fotografia2.png" class="fotografia" alt="Imagen aretes puestos">
+            </div>
+         </section>
+
+         <section class="sectionSlider">
+            <div class="slide-track">
+                <div class="slide">
+                    <div class="containerSlide">
+                    <img class="imgSlide" src="./assets/img/versionLogo.png" alt="variante de logo">
+                    <p class="textoSlide">Creados con amor</p>
+                    </div>
+                    <div class="containerSlide">
+                    <img class="imgSlide" src="./assets/img/versionLogo.png" alt="variante de logo">
+                    <p class="textoSlide">Diseños únicos</p>
+                    </div>
+                    <div class="containerSlide">
+                    <img class="imgSlide" src="./assets/img/versionLogo.png" alt="variante de logo">
+                    <p class="textoSlide">Materiales de calidad</p>
+                    </div>
+                    <div class="containerSlide">
+                    <img class="imgSlide" src="./assets/img/versionLogo.png" alt="variante de logo">
+                    <p class="textoSlide">Hecho por artesanas</p>
+                    </div>
+                </div>
+                <div class="slide">
+                    <div class="containerSlide">
+                    <img class="imgSlide" src="./assets/img/versionLogo.png" alt="variante de logo">
+                    <p class="textoSlide">Creados con amor</p>
+                    </div>
+                    <div class="containerSlide">
+                    <img class="imgSlide" src="./assets/img/versionLogo.png" alt="variante de logo">
+                    <p class="textoSlide">Diseños únicos</p>
+                    </div>
+                    <div class="containerSlide">
+                    <img class="imgSlide" src="./assets/img/versionLogo.png" alt="variante de logo">
+                    <p class="textoSlide">Materiales de calidad</p>
+                    </div>
+                    <div class="containerSlide">
+                    <img class="imgSlide" src="./assets/img/versionLogo.png" alt="variante de logo">
+                    <p class="textoSlide">Hecho por artesanas</p>
+                    </div>
+                </div>
+            </div>
          </section>
     </main>
 
