Creación de la sección de Testimonios

--- a/index.html
+++ b/index.html
@@ -249,6 +249,86 @@
                 </div>
             </div>
          </section>
+         <section class="sectionTestimonios">
+            <p class="tituloTestimonios">¿Qué dicen nuestros clientes?</p>
+            <article class="cardTestimonios">
+                <div class="cardCompleta">
+                    <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
+                    <div class="divTestimonios">
+                        <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
+                        <br><br>No pasa uno desapercibido, eso si es seguro, los amé!!</br></br></p>
+                        <div class="piedeTestimonios">
+                            <img class="fotoCliente" src="./assets/img/fotoCliente.png" alt="foto de un cliente">
+                            <div class="piedeTestimonios2">
+                                <p class="nombre">Sofia Marín</p>
+                                <p class="textoCardTestimonios">Medellín</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cardCompleta">
+                    <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
+                    <div class="divTestimonios">
+                        <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
+                        <br><br>No pasa uno desapercibido, eso si es seguro, los amé!!</br></br></p>
+                        <div class="piedeTestimonios">
+                            <img class="fotoCliente" src="./assets/img/fotoCliente.png" alt="foto de un cliente">
+                            <div class="piedeTestimonios2">
+                                <p class="nombre">Sofia Marín</p>
+                                <p class="textoCardTestimonios">Medellín</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cardCompleta penultima">
+                    <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
+                    <div class="divTestimonios">
+                        <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
+                        <br><br>No pasa uno desapercibido, eso si es seguro, los amé!!</br></br></p>
+                        <div class="piedeTestimonios">
+                            <img class="fotoCliente" src="./assets/img/fotoCliente.png" alt="foto de un cliente">
+                            <div class="piedeTestimonios2">
+                                <p class="nombre">Sofia Marín</p>
+                                <p class="textoCardTestimonios">Medellín</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="cardCompleta ultima">
+                    <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
+                    <div class="divTestimonios">
+                        <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
+                        <br><br>No pasa uno desapercibido, eso si es seguro, los amé!!</br></br></p>
+                        <div class="piedeTestimonios">
+                            <img class="fotoCliente" src="./assets/img/fotoCliente.png" alt="foto de un cliente">
+                            <p class="nombre">Sofia Marín</p>
+                            <p class="textoCardTestimonios">Medellín</p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+         </section>
+
+         <section class="sectionCompra">
+            <p class="tituloCompra">Tu compra</p>
+            <hr class="linea">
+            <article class="contenedorCompra">
+            <article class="cardCompra">
+                <div class="divCompra">
+                    <img class="imgCompra" src="./assets/img/Candado.png">
+                    <p class="textoCompra">De forma segura</p>
+                </div>
+                <div class="divCompra">
+                    <img class="imgCompra" src="./assets/img/Listo.png">
+                    <p class="textoCompra">Paga en línea</p>
+                </div>
+                <div class="divCompra">
+                    <img class="imgCompra" src="./assets/img/home.png">
+                    <p class="textoCompra">Recibe en casa</p>
+                </div>
+            </article>
+        </article>
+         </section>
     </main>
 
     <footer>
