--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="cardCompleta">
+                <div class="cardCompleta antepenultima">
                     <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
                     <div class="divTestimonios">
                         <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
@@ -313,21 +313,21 @@
             <p class="tituloCompra">Tu compra</p>
             <hr class="linea">
             <article class="contenedorCompra">
-            <article class="cardCompra">
-                <div class="divCompra">
-                    <img class="imgCompra" src="./assets/img/Candado.png">
-                    <p class="textoCompra">De forma segura</p>
-                </div>
-                <div class="divCompra">
-                    <img class="imgCompra" src="./assets/img/Listo.png">
-                    <p class="textoCompra">Paga en línea</p>
-                </div>
-                <div class="divCompra">
-                    <img class="imgCompra" src="./assets/img/home.png">
-                    <p class="textoCompra">Recibe en casa</p>
-                </div>
+                <article class="cardCompra">
+                    <div class="divCompra compra1">
+                        <img class="imgCompra" src="./assets/img/Candado.png">
+                        <p class="textoCompra">De forma segura</p>
+                    </div>
+                    <div class="divCompra compra2">
+                        <img class="imgCompra" src="./assets/img/Listo.png">
+                        <p class="textoCompra">Paga en línea</p>
+                    </div>
+                    <div class="divCompra compra3">
+                        <img class="imgCompra compra3" src="./assets/img/home.png">
+                        <p class="textoCompra">Recibe en casa</p>
+                    </div>
+                </article>
             </article>
-        </article>
          </section>
     </main>
 
