Se crea la página de contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -39,7 +39,23 @@
     </header>
 
     <main>
-        <h1>Contacto</h1>
+        <section class="sectionContacto">
+            <article class="articleContacto">
+                <p class="tituloContacto">Contáctanos</p>
+                <p class="parrafoContacto">Dejanos tu mensaje y nos comunicaremos lo más pronto</p>
+            </article>
+            <article class="datos">
+                <div class="primerosDatos">
+                    <p class="datoContacto dato1">Nombre</p>
+                    <p class="datoContacto dato2">Correo</p>
+                </div>
+                <div class="segundosDatos">
+                    <p class="datoContacto dato3">Número de teléfono</p>
+                    <p class="datoContacto dato4">Comentario</p>
+                    <p class="datoContacto dato5">Enviar</p>
+            </div>
+            </article>
+        </section>
     </main>
 
     <footer>
