--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div><p class="cartel cartel1">Los más vendidos</p></div>
                 <article class="card item2">
                     <div class="cardImg">
-                        <img src="./assets/img/producto1.png" class="imgproducto img2" alt="imagenArete">
+                        <img class="imgproducto" src="./assets/img/producto1.png" class="imgproducto img2" alt="imagenArete">
                     </div>
                     <div class="cardDescripcion">
                         <p class="tituloProducto">Aretes Mariposa</p>
