--- a/pages/presentacion.html
+++ b/pages/presentacion.html
@@ -38,8 +38,52 @@
         </nav>
     </header>
 
-    <main class="present">
-        <h1>¿Quienes somos?</h1>
+    <main class="presentación">
+        <img class="frase" src="../assets/img/FrasePresentacion.png">
+        <section class="presentacionBorbolet">
+            <article class="articlePresentacion">
+                <div>
+                    <img class="imgCreadora" src="../assets/img/FotoDueña.jpg">
+                </div>
+                <div class="divCreadora">
+                    <p class="txtCreadora">Soy Yolima, creadora de Borbolet.<br>
+                        Hoy, ver mis diseños llegar a tantas mujeres auténticas<br>
+                        es un sueño hecho realidad.<br> Cada accesorio que creo,
+                        no solo lleva un toque de mi<br>corazón sino también
+                        un homenaje a la cultura</p>
+                        <div class="flechas">
+                            <img class="imgFlecha" src="../assets/img/flechaAbajo.png">
+                        </div>
+                </div>
+            </article>
+
+            <article class="articleHistoria">
+                <div>
+                    <p class="txtCreadora">Desde niña tuve un encuentro que marcó mi vida:<br>
+                        conocí una comunidad indígena y quedé fascinada<br>
+                        al ver como elaboraban accesorios con tanta destreza.<br> Desde ahí, se despertó
+                        en mi una admiración<br>por el trabajo artesanal y la riqueza cultural</p>
+                        <div class="flechas">
+                            <img class="imgFlecha" src="../assets/img/flechaAbajo.png">
+                        </div>
+                </div>
+                <div>
+                    <img class="imgIndigenas" src="../assets/img/fotoIndigenas.jpeg">
+                </div>
+            </article>
+
+            <article class="articleResultado">
+                <div>
+                    <img class="imgModelos" src="../assets/img/fotoModelos.jpeg">
+                </div>
+                <div class="divCreadora">
+                    <p class="txtCreadora">Crear este tipo de accesorios me permite<br>
+                        satisfacer la necesidad de muchas mujeres que les<br>
+                        gusta resaltar, verse elegantes y originales</p>
+                </div>
+            </article>
+
+        </section>
     </main>
 
     <footer>
