--- a/pages/collares.html
+++ b/pages/collares.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=>, initial-scale=1.0">
-    <title>Aretes</title>
+    <meta name="title" content="Borbolet | Collares en mostacilla">
+    <meta name="description" content="Aretes y collares hechos con mostacilla y miyuki">
+    <meta name="keywords" content="aretes con chaquira, aretes bordados, collares en mostacilla, accesorios miyuki">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Maria Fernanda Macea">
+    <meta name="copyright" content="Borbolet">
+    <title>Borbolet | Collares Tejidos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/style.css">
