Se crea la página de Nuestros Procesos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                           <li><img src="./assets/img/collar-svgrepo-com 1.png" alt="Logo de un collar"><a href="./pages/collares.html">Collares</a></li>
                         </ul>
                       </div>
-                    <li class="testimonios"> <a href="./pages/testimonios.html">Testimonios</a> </li>
+                    
                     <li class="procesos"> <a href="./pages/procesos.html">Proceso creativo</a> </li>
                 </div>
 
@@ -256,7 +256,7 @@
                     <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
                     <div class="divTestimonios">
                         <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
-                        <br><br>No pasa uno desapercibido, eso si es seguro, los amé!!</br></br></p>
+                        <br>No pasa uno desapercibido, eso si es seguro, los amé!!</p>
                         <div class="piedeTestimonios">
                             <img class="fotoCliente" src="./assets/img/fotoCliente.png" alt="foto de un cliente">
                             <div class="piedeTestimonios2">
@@ -270,7 +270,7 @@
                     <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
                     <div class="divTestimonios">
                         <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
-                        <br><br>No pasa uno desapercibido, eso si es seguro, los amé!!</br></br></p>
+                        <br>No pasa uno desapercibido, eso si es seguro, los amé!!</p>
                         <div class="piedeTestimonios">
                             <img class="fotoCliente" src="./assets/img/fotoCliente.png" alt="foto de un cliente">
                             <div class="piedeTestimonios2">
@@ -284,7 +284,7 @@
                     <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
                     <div class="divTestimonios">
                         <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
-                        <br><br>No pasa uno desapercibido, eso si es seguro, los amé!!</br></br></p>
+                        <br>No pasa uno desapercibido, eso si es seguro, los amé!!</p>
                         <div class="piedeTestimonios">
                             <img class="fotoCliente" src="./assets/img/fotoCliente.png" alt="foto de un cliente">
                             <div class="piedeTestimonios2">
@@ -298,7 +298,7 @@
                     <img class="estrellas" src="./assets/img/Estrellas.png" alt="estrellas">
                     <div class="divTestimonios">
                         <p class="textoCardTestimonios">Mis aretes han sido lo más admirado de este mundo, gracias por mis Monarcas.
-                        <br><br>No pasa uno desapercibido, eso si es seguro, los amé!!</br></br></p>
+                        <br>No pasa uno desapercibido, eso si es seguro, los amé!!</p>
                         <div class="piedeTestimonios">
                             <img class="fotoCliente" src="./assets/img/fotoCliente.png" alt="foto de un cliente">
                             <p class="nombre">Sofia Marín</p>
@@ -354,7 +354,6 @@
                         <li class="inicio"><a class="link" href="#">Inicio</a></li>
                         <li class="aretes"><a class="link" href="./pages/aretes.html">Aretes</a></li>
                         <li class="collares"><a class="link" href="./pages/collares.html">Collares</a></li>
-                        <li class="testimonios"> <a class="link" href="./pages/testimonios.html">Testimonios</a> </li>
                         <li class="procesos"> <a class="link" href="./pages/procesos.html">Proceso creativo</a> </li>
                         <li class="presentacion"> <a class="link" href="./pages/presentacion.html">¿Quiénes somos?</a> </li>
                         <li class="contacto"> <a class="link" href="./pages/contacto.html">Contáctanos</a> </li>
