--- a/pages/procesos.html
+++ b/pages/procesos.html
@@ -21,7 +21,6 @@
                           <li><img src="../assets/img/collar-svgrepo-com 1.png" alt="Logo de un collar"><a href="./collares.html">Collares</a></li>
                         </ul>
                       </div>
-                    <li class="testimonios"> <a href="./testimonios.html">Testimonios</a> </li>
                     <li class="procesos"> <a href="#">Proceso creativo</a> </li>
                 </div>
 
@@ -39,7 +38,37 @@
     </header>
 
     <main>
-        <h1>Nuestros procesos</h1>
+        <section class="sectionProcesos">
+            <h2 class="tituloProcesos">¿Cómo hacemos nuestros accesorios en mostacilla?</h2>
+            <p class="txtProcesos">Usamos materiales de excelente calidad: Aros en golfi, topos en
+            bronce con baño de oro y mostacilla checa, la protagonista en Borbolet.</p>
+            <hr class="linea">
+            <h3 class="tituloProcesos">¿Por qué usar mostacilla checa?</h3>
+            <div class="divProcesos">
+                <img class="imgMostacilla" src="../assets/img/Mostacilla.jpg">
+                <p class="txtProcesos">~ Las mostacillas checas son conocidas mundialmente por su calidad,
+                aseguran una durabilidad superior<br><br>
+                ~ En las mostacillas checas encontramos gran variedad de colores y efectos
+                (mate, brillante, tornasolado, etc) Esto permite crear accesorios personalizados y variados<br><br>
+                ~ La mostacilla checa es resistente al desgaste y a la humedad; por eso te garantizamos
+                la funcionalidad de los accesorios a lo largo del tiempo
+                </p>
+            </div>
+            <hr class="linea">
+            <p class="tituloProcesos item1">¿Cuánto tiempo invertimos en nuestros accesorios?</p>
+            <p class="txtProcesos">Cada pieza lleva un día completo de trabajo, desde seleccionar cuidadosamente
+               las mostacillas hasta dar vida al diseño con presición y detalle
+            </p>
+            <div class="videoYoutube">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Xwk8-h5OiqQ?si=tLPmtL1sN6B-DrDO"
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+            <p class="txtProcesos txt1">Es un arte que requiere de paciencia, dedicación y especialmente de pasión</p>
+            <div class="divbtnComprar">
+                <button class="btnComprar">¡Quiero las mías!</button>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -65,7 +94,6 @@
                         <li class="inicio"><a class="link" href="../index.html">Inicio</a></li>
                         <li class="aretes"><a class="link" href="./aretes.html">Aretes</a></li>
                         <li class="collares"><a class="link" href="./collares.html">Collares</a></li>
-                        <li class="testimonios"> <a class="link" href="./testimonios.html">Testimonios</a> </li>
                         <li class="procesos"> <a class="link" href="#">Proceso creativo</a> </li>
                         <li class="presentacion"> <a class="link" href="./presentacion.html">¿Quiénes somos?</a> </li>
                         <li class="contacto"> <a class="link" href="./contacto.html">Contáctanos</a> </li>
