--- a/pages/presentacion.html
+++ b/pages/presentacion.html
@@ -21,7 +21,7 @@
                           <li><img src="../assets/img/collar-svgrepo-com 1.png" alt="Logo de un collar"><a href="./collares.html">Collares</a></li>
                         </ul>
                       </div>
-                    <li class="testimonios"> <a href="./testimonios.html">Testimonios</a> </li>
+                    
                     <li class="procesos"> <a href="./procesos.html">Proceso creativo</a> </li>
                 </div>
 
@@ -47,9 +47,9 @@
                 </div>
                 <div class="divCreadora">
                     <p class="txtCreadora">Soy Yolima, creadora de Borbolet.<br>
-                        Hoy, ver mis diseños llegar a tantas mujeres auténticas<br>
-                        es un sueño hecho realidad.<br> Cada accesorio que creo,
-                        no solo lleva un toque de mi<br>corazón sino también
+                        Hoy, ver mis diseños llegar a tantas mujeres<br>
+                        auténticas es un sueño hecho realidad.<br> Cada accesorio que creo,
+                        no solo lleva un toque de<br>mi corazón sino también
                         un homenaje a la cultura</p>
                         <div class="flechas">
                             <img class="imgFlecha" src="../assets/img/flechaAbajo.png">
@@ -78,9 +78,28 @@
                 </div>
                 <div class="divCreadora">
                     <p class="txtCreadora">Crear este tipo de accesorios me permite<br>
-                        satisfacer la necesidad de muchas mujeres que les<br>
-                        gusta resaltar, verse elegantes y originales</p>
+                        satisfacer la necesidad de muchas mujeres a las<br>
+                        que les gusta resaltar, verse elegantes y originales</p>
                 </div>
+            </article>
+            <article class="presentacionMensaje">
+                <article class="imgpresentacionMensaje">
+                    <div class="divPresentacionArete">
+                        <img class="aretePresentacion" src="../assets/img/aretePresentacion.jpeg">
+                    </div>
+                    <div class="divPresentacionArete">
+                        <img class="aretePresentacion" src="../assets/img/aretePresentacion.jpeg">
+                    </div>
+                    <div class="divPresentacionArete">
+                        <img class="aretePresentacion" src="../assets/img/aretePresentacion.jpeg">
+                    </div>
+                </article>
+                    <p class="pMensaje">Estas piezas ofrecen más que belleza:<br>
+                    cuentan historias y transmiten emociones
+                    </p>
+                    <div class="divbtnComprar">
+                        <button class="btnComprar">¡Quiero las mías!</button>
+                    </div>
             </article>
 
         </section>
@@ -109,7 +128,6 @@
                         <li class="inicio"><a class="link" href="../index.html">Inicio</a></li>
                         <li class="aretes"><a class="link" href="./aretes.html">Aretes</a></li>
                         <li class="collares"><a class="link" href="./collares.html">Collares</a></li>
-                        <li class="testimonios"> <a class="link" href="./testimonios.html">Testimonios</a> </li>
                         <li class="procesos"> <a class="link" href="./procesos.html">Proceso creativo</a> </li>
                         <li class="presentacion"> <a class="link" href="#">¿Quiénes somos?</a> </li>
                         <li class="contacto"> <a class="link" href="./contacto.html">Contáctanos</a> </li>
