Responsive de la pagina de Quienes somos

--- a/pages/presentacion.html
+++ b/pages/presentacion.html
@@ -38,9 +38,9 @@
         </nav>
     </header>
 
-    <main class="presentación">
-        <img class="frase" src="../assets/img/FrasePresentacion.png">
+    <main>
         <section class="presentacionBorbolet">
+            <img class="frase" src="../assets/img/FrasePresentacion.png">
             <article class="articlePresentacion">
                 <div>
                     <img class="imgCreadora" src="../assets/img/FotoDueña.jpg">
