ajustes en el footer

--- a/index.html
+++ b/index.html
@@ -351,12 +351,12 @@
                 <article class="menuFooter">
                     <ul class="link-list">
                         <p class="subtitulo">Menú</p>
-                        <li class="inicio"><a class="link" href="#">Inicio</a></li>
-                        <li class="aretes"><a class="link" href="./pages/aretes.html">Aretes</a></li>
-                        <li class="collares"><a class="link" href="./pages/collares.html">Collares</a></li>
-                        <li class="procesos"> <a class="link" href="./pages/procesos.html">Proceso creativo</a> </li>
-                        <li class="presentacion"> <a class="link" href="./pages/presentacion.html">¿Quiénes somos?</a> </li>
-                        <li class="contacto"> <a class="link" href="./pages/contacto.html">Contáctanos</a> </li>
+                        <li class="list inicio"><a class="link" href="#">Inicio</a></li>
+                        <li class="list aretes"><a class="link" href="./pages/aretes.html">Aretes</a></li>
+                        <li class="list collares"><a class="link" href="./pages/collares.html">Collares</a></li>
+                        <li class="list procesos"><a class="link" href="./pages/procesos.html">Proceso creativo</a></li>
+                        <li class="list presentacion"><a class="link" href="./pages/presentacion.html">¿Quiénes somos?</a></li>
+                        <li class="list contacto"><a class="link" href="./pages/contacto.html">Contáctanos</a></li>
                     </ul>
                 </article>
                 <article>
