--- a/pages/procesos.html
+++ b/pages/procesos.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul class="navBar">
-                <div>
+                <div class="divNav">
                     <div class="dropdown">
                         <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">   
                             <a href="#"> Colección </a>
