--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="mobile-navbar navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
               <!-- Botón de menú hamburguesa -->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-label="Toggle navigation">
