--- a/index.html
+++ b/index.html
@@ -56,9 +56,14 @@
                 </div>
             </div>
 
-            <div class="logo-mobile"></div>
-                <a class="aBrand" href="#"><img class="navbar-brand" src="../assets/img/Logo.png" alt="Logo"></a>
+            <div class="logo-mobile">
+                <a href="#"><img class="navbar-brand" src="./assets/img/Logo.png" alt="Logo"></a>
             </div>
+
+            <div class="divCesta">
+                <img class="Cesta" src="./assets/img/CestaNav.png" alt="CarritoDeCompras">
+            </div>
+
           </nav>
 
         <nav class="desktop-navbar">
@@ -69,21 +74,21 @@
                             <a href="#"> Colección </a>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                          <li><img src="../assets/img/Aretes.png" alt="Logo de unos aretes"><a href="./pages/aretes.html">Aretes</a></li>
-                          <li><img src="../assets/img/collar-svgrepo-com 1.png" alt="Logo de un collar"><a href="./pages/collares.html">Collares</a></li>
+                          <li><img src="./assets/img/Aretes.png" alt="Logo de unos aretes"><a href="./pages/aretes.html">Aretes</a></li>
+                          <li><img src="./assets/img/collar-svgrepo-com 1.png" alt="Logo de un collar"><a href="./pages/collares.html">Collares</a></li>
                         </ul>
                       </div>
                     <li class="procesos"> <a href="./pages/procesos.html">Proceso creativo</a> </li>
                 </div>
 
                 <div class="logo">
-                <li> <a href="#"><img src="../assets/img/Logo.png" alt="Logo"></a></li>
+                <li> <a href="#"><img src="./assets/img/Logo.png" alt="Logo"></a></li>
                 </div>
 
                 <div>
                     <li class="presentacion"> <a href="./pages/presentacion.html">¿Quiénes somos?</a> </li>
                     <li class="contacto"> <a href="./pages/contacto.html">Contáctanos</a> </li>
-                    <li class="cesta"> <a href=""><img src="../assets/img/CestaNav.png" alt="CarritoDeCompras"></a></li>
+                    <li class="cesta"> <a href=""><img src="./assets/img/CestaNav.png" alt="CarritoDeCompras"></a></li>
                 </div>
             </ul>
         </nav>
@@ -243,7 +248,7 @@
          </section>
 
          <section class="sectionFotografia">
-            <p class="tituloFotografia">Diseños que te elevan</p>
+            <p class="tituloFotografia">La naturaleza inspira, <br>Borbolet lo crea</p>
             <div class="fotografias">
                 <img src="./assets/img/Fotografia1.png" class="fotografia" alt="Imagen aretes puestos">
                 <img src="./assets/img/Fotografia2.png" class="fotografia" alt="Imagen aretes puestos">
