--- a/pages/aretes.html
+++ b/pages/aretes.html
@@ -54,9 +54,14 @@
                 </div>
             </div>
 
-            <div class="logo-mobile"></div>
+            <div class="logo-mobile">
                 <a class="aBrand" href="../index.html"><img class="navbar-brand" src="../assets/img/Logo.png" alt="Logo"></a>
             </div>
+
+            <div class="divCesta">
+                <img class="Cesta" src="../assets/img/CestaNav.png" alt="CarritoDeCompras">
+            </div>
+
           </nav>
 
         <nav class="desktop-navbar">
