se arreglan estilos de navbar

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             </div>
 
             <div class="logo-mobile">
-                <a href="#"><img class="navbar-brand" src="./assets/img/Logo.png" alt="Logo"></a>
+                <a href="#">
+                    <img class="navbar-brand" src="./assets/img/Logo.png" alt="Logo">
+                </a>
             </div>
 
             <div class="divCesta">
