solucion de movimiento en navbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </button>
               <!-- Contenedor del menú desplegable -->
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <ul class="navbar-nav">
                         <!-- Menú desplegable "Colección" -->
                         <li class="nav-item dropdown">
                             <a class="coleccion-link nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
